welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def hH (c:Color) {
		setCouleurBrosse(c)
		avance();
		baisseBrosse();
		leveBrosse();
		gauche();
		avance();
		gauche();
		avance();
		baisseBrosse();
		leveBrosse();
		gauche();
		avance();
		gauche();
		avance();
		avance();
		baisseBrosse();
		leveBrosse();
		droite();
		avance();
		droite();
		avance();
		baisseBrosse();
		leveBrosse();
		droite();
		avance();
		droite();
		recule();
		recule();
				
	}

hH(Coulor.YELLOW);

}
